--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@supabase/supabase-js": "^2.52.1",
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.10.0",
     "firebase": "^11.7.1",
