--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-firebase-hooks": "^5.1.1",
+    "react-markdown": "^10.1.0",
     "react-router-dom": "^7.6.0",
     "tailwindcss": "^4.1.5",
     "zustand": "^5.0.4"
