--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@tailwindcss/vite": "^4.1.5",
     "axios": "^1.10.0",
     "firebase": "^12.3.0",
+    "firebase-admin": "^13.5.0",
     "mapbox-gl": "^3.15.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
