--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
     "dev": "vite --host",
     "build": "tsc -b && vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node src/config/firebase.js",
+    "deploy": "npm run build && firebase deploy"
   },
   "dependencies": {
     "@supabase/supabase-js": "^2.54.0",
